@@ -1,3 +1,5 @@
+Apr 21, 2015: libarchive 3.1.3 released
+
 Apr 11, 2015: libarchive's issue tracker is now hosted at GitHub.
     https://github.com/libarchive/libarchive/issues
 
